<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_ignition_bringup</name>
  <version>1.0.1</version>
  <description>TurtleBot 4 Ignition Simulator bringup</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Turtlebot4 -->
  <depend>turtlebot4_description</depend>
  <depend>turtlebot4_msgs</depend>
  <depend>turtlebot4_navigation</depend>
  <depend>turtlebot4_node</depend>
  <depend>turtlebot4_viz</depend>
  <depend>turtlebot4_ignition_gui_plugins</depend>
  <depend>turtlebot4_ignition_toolbox</depend>

  <!-- Create3 -->
  <depend>irobot_create_description</depend>
  <depend>irobot_create_common_bringup</depend>
  <depend>irobot_create_nodes</depend>
  <depend>irobot_create_toolbox</depend>
  <depend>irobot_create_ignition_bringup</depend>
  <depend>irobot_create_ignition_toolbox</depend>

  <!-- ROS IGN -->
  <depend>ros_ign_interfaces</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>irobot_create_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
